src/app/page.module.css
.page {
  --gray-rgb: 0, 0, 0;
  --gray-alpha-200: rgba(var(--gray-rgb), 0.08);
  --gray-alpha-100: rgba(var(--gray-rgb), 0.05);

  --button-primary-hover: #383838;
  --button-secondary-hover: #f2f2f2;
  --dial-size: 240px;

  display: flex;
  align-items: center;
  justify-items: center;
  width: 100vw;
  height: 100vh;
  background-color: #DEDEDE;
}

@media (prefers-color-scheme: dark) {
  .page {
    --gray-rgb: 255, 255, 255;
    --gray-alpha-200: rgba(var(--gray-rgb), 0.145);
    --gray-alpha-100: rgba(var(--gray-rgb), 0.06);

    --button-primary-hover: #ccc;
    --button-secondary-hover: #1a1a1a;
  }
}

.dial_group {
  display: flex;
  gap: 16px;
  flex-direction: column;
  justify-items: center;
  align-items: center;

  border: 2px solid #1a1a1a;
  border-radius: 160px 160px 16px 16px;
  width: 320px;
  height: 450px;
  padding: 40px 40px;
}

.dial_dot {
  width: 12px;
  height: 12px;
  background-color: var(--accent);
  border-radius: 50%;
}

.dial_container {
  position: relative;
  width: var(--dial-size);
  height: var(--dial-size);
}

.dial_wrapper {
  position: relative;
  width: var(--dial-size);
  height: var(--dial-size);
  /* border: 2px solid #1a1a1a; */
    &:hover {
    .dial_rim {
    transform: scale(1.02);
    opacity: 0.7;
    }
  }
}

.dial_rim {
  position: relative;
  width: 100%;
  height: 100%;
  transform-origin: center center;
  transition: transform 0.2s, opacity 0.2s;
}

.year_dial_display {
  position: absolute;
  top: 50%;
  left: 50%;
  /* width: 100%; */
  /* height: 100%; */
  transform: translate(-50%, -50%);
  font-family: var(--font-geist-mono);
  font-size: 24px;
  z-index: 1000;
  color: #1a1a1a;
  /* line-height: 56px; */
}

.year_dial_tick {
  opacity: 0.0;
  position: absolute;
  top: 0%;
  left: 50%;
  width: 32px;
  height: 48px;
  background-color: #1a1a1a;
  transform-origin: center calc(var(--dial-size) / 2);
  margin-left: -16px;
  z-index: 1000;
  cursor: pointer;
}

.nodrag {
  user-drag: none;
  -webkit-user-drag: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  pointer-events: none;
}

.main {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
}

.canvas {
  position: absolute !important;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 0;
}

.date_panel {
  display: absolute;
  top: 32px;
  left: 32px;
  width: fit-content;
  z-index: 10;
  padding: 24px;
  background-color: white;
}

.main ol {
  font-family: var(--font-geist-mono);
  padding-left: 0;
  margin: 0;
  font-size: 14px;
  line-height: 24px;
  letter-spacing: -0.01em;
  list-style-position: inside;
}

.main li:not(:last-of-type) {
  margin-bottom: 8px;
}

.main code {
  font-family: inherit;
  background: var(--gray-alpha-100);
  padding: 2px 4px;
  border-radius: 4px;
  font-weight: 600;
}

.ctas {
  display: flex;
  gap: 16px;
}

.ctas a {
  appearance: none;
  border-radius: 128px;
  height: 48px;
  padding: 0 20px;
  border: 1px solid transparent;
  transition:
    background 0.2s,
    color 0.2s,
    border-color 0.2s;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 16px;
  line-height: 20px;
  font-weight: 500;
}

a.primary {
  background: var(--foreground);
  color: var(--background);
  gap: 8px;
}

a.secondary {
  border-color: var(--gray-alpha-200);
  min-width: 158px;
}

.footer {
  grid-row-start: 3;
  display: flex;
  gap: 24px;
}

.footer a {
  display: flex;
  align-items: center;
  gap: 8px;
}

.footer img {
  flex-shrink: 0;
}

/* Enable hover only on non-touch devices */
@media (hover: hover) and (pointer: fine) {
  a.primary:hover {
    background: var(--button-primary-hover);
    border-color: transparent;
  }

  a.secondary:hover {
    background: var(--button-secondary-hover);
    border-color: transparent;
  }

  .footer a:hover {
    text-decoration: underline;
    text-underline-offset: 4px;
  }
}

@media (max-width: 600px) {
  .page {
    padding: 32px;
    padding-bottom: 80px;
  }

  .main {
    align-items: center;
  }

  .main ol {
    text-align: center;
  }

  .ctas {
    flex-direction: column;
  }

  .ctas a {
    font-size: 14px;
    height: 40px;
    padding: 0 16px;
  }

  a.secondary {
    min-width: auto;
  }

  .footer {
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
  }
}

@media (prefers-color-scheme: dark) {
  .logo {
    filter: invert();
  }
}

